# VVmos-

./: .copilotignore  .gitattributes  .gitignore  COPILOT_QUICK_REF.py  VMOS_CLOUD_INTERNALS_REVEALED.md.bak  adb_key  adb_key_decoded  build-deb.sh  check_all_devices_status.py  check_device_APP5AU4BB1QQBHNA.js  check_device_py_APP5AU4BB1QQBHNA.py  check_enable_adb.py  check_inject_status.py  clone_220_to_d1.sh  clone_engine.py  clone_full_device_v9.py  clone_restore.py  clone_restore_v2.py  clone_restore_v3.py  clone_restore_v4.py  clone_restore_v5.py  clone_restore_v5_1.py  clone_restore_v6.py  clone_v8_pipeline.py  clone_v9_pipeline.py  complete_clone_verify.py  copilot_cache_engine.py  copilot_monitor.py  copilot_orchestrator.py  copilot_rate_limit_bypass.py  copilot_rate_limit_bypass_advanced.py  copilot_request_queue.py  db_check.py  deep_device_analysis.py  deep_scan_APP5BJ4LRVRJFJQR.py  device_accounts_ce.db  device_accounts_de.db  diagnose_account.py  e2e_billing_expiration_recon.py  e2e_cloud_prepare.py  (+56 more)
.github/: copilot-instructions.md.bak  copilot-instructions.md.v4.bak
adb/: adb_stream.js  find_220_pid.js  http_relay_test.js
autonomous/: AUTONOMOUS_FINAL_INTEGRATION_TEST.py  AUTONOMOUS_MODE_TEST_EXAMPLE.py  autonomous_operations.py  autonomous_real_work.py  autonomous_vector_discovery.py  autonomous_vmos_operation.py  capture_screenshots_autonomous.py  production_initializer.py  real_work_executor.py
cctv/: cctv_config.py  cctv_launcher.sh  cctv_recorder.py  cctv_server.py  deploy_all_live_cameras_localhost.py  deploy_live_cameras_localhost.py  find_100_bed_cams.py  find_20_cams.py  find_20_cams_demo.py  find_20_cams_direct.py  find_20_from_existing.py  find_all_sl_cams_stream.py  get_20_from_masscan.py  multi_country_scan_cctv.py  rtsp_blitz.py  rtsp_blitz_v2.py  rtsp_blitz_v3.py  rtsp_live_stream.py  rtsp_masscan_hunter.py  rtsp_only_hunter.py  rtsp_viewer_v2.py  rtsp_web_viewer.py  streaming_infrastructure_deploy.py  titan_bed_hunter.py  titan_cctv.py  titan_stream_hunter.py  unified_stream_archive.py  verify_all_cameras.py  yolo_room_hunter.py  yolo_room_hunter_v4.py
clone_build/: Dockerfile  build.sh  deploy.sh
cloning/: adb_neighbor_clone.js  advanced_neighbor_clone.js  backup_restore_220.js  check_split_apks.js  clone_220_to_d2.js  clone_final.js  clone_hybrid.js  clone_neighbors_full.js  clone_phase2_3.js  clone_stream.js  clone_via_network.js  extract_220_noroot.js  full_app_clone.js  full_clone_fixed.js  relay_final.js  relay_pull.js  relay_test3.js  relay_v2.js  retry_large_apks.js  self_clone_and_probe.js  test_relay_fix.js
console/: build.sh
copilot_support_bundle_20260413_154346/: copilot_cache.README
debian/: conffiles  control  postinst  postrm  preinst  prerm  titan-vmos.modprobe.conf  titan-vmos.modules-load.conf  titan-x.modprobe.conf  titan-x.modules-load.conf
electron/: build.sh  check_device.js  dry-run-s24.js  fix-accountmgr.js  fix_devices.js  inject-gmail-s24.js  inject-gmail.js  inject-s24ultra-final.js  inject-s24ultra-v2.js  inject-s24ultra-v3.js  inject-s24ultra.js  main.js  preload.js  probe-device.js  reinject-protect.js  restart-device.js  start.sh  start_stopped_device.js  validators.js  vmos-titan.desktop
escape/: autonomous_escape_test_production.py  autonomous_vmos_scan_escape_map.py  direct_execute_escape.py  exploit_vectors.js  neighborhood_exploitation_framework.py  new_escape_methods.js  vmos_container_escape_mapper.py  vmos_deep_escape.py  vmos_escape_and_map_devices.py  vmos_oneplus_escape_mapper.py  vmos_poll_escape.py
experiments/: batch_experiment_runner.py
genesis/: genesis_fix2.py  genesis_forger.js  genesis_full_pipeline.py  genesis_oneplus_executor.py  genesis_v3_simplified.py  oneplus_device_tester.py  oneplus_genesis_forge.py  oneplus_shell_commander.py
injection/: apply_identities.js  d2_install.js  extract_inject_final.js  finalize_inject.js  inject_accounts_d2.js  install_apps_d2.js  phase2_patch.py  phase5_wallet.py  phase8_validate.py  rebuild_d2.js  root_data_inject.js  vmos_account_fixer.py  vmos_final_inject.py  vmos_inject_phase2.py  vmos_wallet_inject.py
nats/: exploit_armcloud_nats_registry.js  nats_exploit.js  nats_exploit_fixed.js  nats_exploit_v2.js  nats_final_exploit.js  nats_neighbor_exploit.js  nats_neighbor_exploit_v2.js  test_nats.js
neighbor/: deep_neighbor_probe.js  direct_neighbor_exploit.js  exploit_neighbors.js  find_neighbor_creds.js  full_neighbor_exploit.js  get_neighbor.js  get_neighbor_v2.js  get_neighbor_v3.js  neighbor_5555.js  neighbor_app_extract.js  neighbor_app_scanner.js  neighbor_clone_dual_injector.js  neighbor_direct.js  neighbor_exploit_hybrid.js  neighbor_full_scan.js  neighbor_scan.js  neighbor_via_api.js
neighbor_clones/: accts_ce.db  accts_de.db  accts_de_migrated.db  fresh_ce.db  gsf_gservices2.db  hybrid_ce.db  hybrid_de.db  micro_ce.db  micro_de.db  micro_de_fixed.db  phenotype.db  phenotype_wal_backup.db  setuid_exec  setuid_exec.c  upload
output/: d1_accounts_ce.db  d1_accounts_de.db  final_accounts_ce.db  final_accounts_de.db  inject_accounts_ce.db
rka_proxy/: Dockerfile  device_pool.py  docker-compose.yml  server.py
scanning/: analyze_agent.js  api_native_cloner.py  api_native_restorer.py  backup_data_extractor.py  crack_xu_api.js  crack_xu_auth.js  deep_api_probe.js  deep_device_scanner.js  deep_dive_scan.js  deep_extractor.py  device_backup_restore.py  device_cloner.py  direct_device_commander.py  full_clone_v3.py  full_neighborhood_scanner.py  independent_deep_scan.js  manifest_and_share.py  neighbor_device_scanner.py  neighborhood_harvester.py  probe_220_ports.js  probe_220_root.js  probe_agent.js  (+7 more)
skills/: build-deb.sh  capture_fixed.py  find_20_all_methods.py  find_20_cams.py  find_20_cams_direct.py  find_more_cams.py  genesis_full_pipeline.py  genesis_ultra_v35_test.py  get_20_cams.py  phase2_cont.py  phase4_account.py  phase6_aging.py  pyproject.toml  test_hunt.py  titan-playground  tmp_check.py  tmp_reboot.py  tmp_restart.py  vmos_device_inject.py  vmos_final_inject.py  vmos_inject_phase2.py  vmos_wallet_inject.py
(+1458 files in other folders)
