[project]
name = "titan-vmos"
version = "13.0.0"
description = "Titan VMOS — Antidetect Android Device Platform (Cuttlefish)"
requires-python = ">=3.10"
license = {text = "Proprietary"}

[project.urls]
Homepage = "https://github.com/malithwishwa02-dot/titan-vmos"
Repository = "https://github.com/malithwishwa02-dot/titan-vmos"
Issues = "https://github.com/malithwishwa02-dot/titan-vmos/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vmos_titan*"]
where = ["."]

# ── pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Pure logic tests, no ADB or network",
    "integration: Tests requiring mocked ADB layer",
    "e2e: End-to-end tests requiring live Cuttlefish device",
]
addopts = "-v --tb=short -q"
filterwarnings = ["ignore::DeprecationWarning"]

# ── coverage ──────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["vmos_titan"]
omit = [
    "tests/*",
    "scripts/*",
    "vmos-titan/vmos_titan/core/_deprecated/*",
    "vmos-titan/vmos_titan/api/routers/_deprecated/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 50
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

# ── ruff ──────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "venv",
    "node_modules",
    "vmos-titan/desktop/dist",
    "vmos-titan/vmos_titan/core/_deprecated",
    ".git",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default arg (FastAPI Depends pattern)
    "RUF012", # mutable class default (dataclass fields)
    "SIM108", # ternary operator (readability)
]

[tool.ruff.lint.isort]
known-first-party = ["vmos_titan"]

# ── mypy ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false  # gradual — enable per-module below

[[tool.mypy.overrides]]
module = [
    "vmos_titan.core.exceptions",
    "vmos_titan.core.models",
    "vmos_titan.core.adb_utils",
    "vmos_titan.core.job_manager",
    "vmos_titan.core.trust_scorer",
]
disallow_untyped_defs = true

# ── black (fallback if ruff-format not used) ──────────────────────────
[tool.black]
line-length = 120
target-version = ["py310"]
